--- a/instruccionesformulario.html
+++ b/instruccionesformulario.html
@@ -6,6 +6,7 @@
  <title>Instrucciones Formulario</title>
  <meta name="description" content="Formulario">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="fonts/font.css">
  <link rel='stylesheet' media='screen and (min-width: 961px)' href='css/Instruccionespc.css'>
  <link rel='stylesheet' media='screen and (max-width: 960px)' href='css/Instruccionesmvl.css'>
  <script src="js/js.js"></script>
